--- a/embedded/embedded-economy.css
+++ b/embedded/embedded-economy.css
@@ -5,7 +5,7 @@
 }
 text, textPath {
   font-family: Poppins; 
-  font-size: 63; 
+  font-size: 63px; 
   font-weight: 400; 
   fill:black; 
   letter-spacing: 1; 
@@ -138,7 +138,7 @@ text, textPath {
 #dnjs-earth-text,
 #dnjs-society-text, 
 #dnjs-economy-text {
-  font-size:65; 
+  font-size:65px; 
   font-weight: 900; 
   letter-spacing: 2; 
 }
@@ -146,7 +146,7 @@ text, textPath {
 #dnjs-household-text, 
 #dnjs-market-text,
 #dnjs-state-text {
-  font-size: 60; 
+  font-size: 60px; 
   font-weight: 900; 
   letter-spacing: 2.5; 
 }
@@ -166,16 +166,16 @@ text, textPath {
   fill: inherit;
 }
 #dnjs-ff-financial-text textPath {
-  font-size: 50;
+  font-size: 50px;
 }
 #dnjs-ff-flows-text textPath
 {
-  font-size: 50;
+  font-size: 50px;
   letter-spacing: 5; 
 }
 #dnjs-attribution-title-text,
 #dnjs-attribution-after-text {
-  font-size:35;
+  font-size:35px;
 }
 
 /* Rotating financial flows */
